# TheRustProgrammingLanguage

./: .gitignore  Cargo.toml  README.md
notes/: ch04.md  ch05.md  ch09.md  ch11.md  ch13.md  ch14.md  ch16.md  ch17.md  ch18.md  stack_and_heap.md
projects/ch02/guessing_game/: Cargo.toml
projects/ch03/: memo.md
projects/ch03/excercise/: Cargo.toml  README.md
projects/ch03/variables/: Cargo.toml
projects/ch04/: Cargo.toml
projects/ch04/drop_order/: Cargo.toml
projects/ch04/src/: main.rs
projects/ch05/ch05_01/: Cargo.toml
projects/ch05/rectangles/: Cargo.toml  README.md 
projects/ch06/pattern_match/: Cargo.toml
projects/ch07/communicator/: Cargo.toml
projects/ch07/nested/: Cargo.toml
projects/ch07/outermost/: Cargo.toml
projects/ch08/excercise/: Cargo.toml  README.md
projects/ch08/hashmap/: Cargo.toml
projects/ch08/string_sample/: Cargo.toml
projects/ch08/vec/: Cargo.toml
projects/ch09/guessing_game/: Cargo.toml
projects/ch09/panic_error/: Cargo.toml
projects/ch09/panic_error/src/: main.rs
projects/ch09/result_error/: Cargo.toml
projects/ch10/generics/: Cargo.toml
projects/ch10/life_time/: Cargo.toml
projects/ch10/trait_generics/: Cargo.toml
projects/ch11/adder/: Cargo.toml
projects/ch11/showing_function_output/: Cargo.toml
projects/ch14/art/: Cargo.toml
projects/ch14/art/src/: lib.rs  main.rs
projects/ch14/exp_cargo/: Cargo.toml
projects/ch14/exp_cargo/src/: lib.rs
projects/ch17/oop/: Cargo.toml
projects/ch21/hello_macro/hello_macro_derive/: Cargo.toml
projects/ch21/hello_macro/hello_macro_derive/src/: lib.rs
(+124 files in other folders)
