[package]
name = "hackelnickel"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Takumi Okamoto <takumi@okamoto>"]
description ="A excercise project for \"The Rust Programming language\" at chapter14"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
