[package]
name = "exp_cargo"
version = "0.1.0"
authors = ["Takumi Okamoto <takumi1988okamoto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.dev]
# 最適化レベル値[0-3]上げるとコンパイルに時間がかかる
opt-level = 0 # デフォルト値

[profile.release]
opt-level = 3 # デフォルト値